cluster/apps/cloudnative-pg/cnpg-plugin-barman-cloud/networkpolicies/cnpg-plugin-barman.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnpg-plugin-barman-cloud
  namespace: cnpg-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cnpg-plugin-barman-cloud
      app.kubernetes.io/name: plugin-barman-cloud
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            "k8s:io.kubernetes.pod.namespace": kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8000"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
